fix spacing and color

--- a/client/src/events/mission/Login/Login.scss
+++ b/client/src/events/mission/Login/Login.scss
@@ -20,7 +20,6 @@
     }
 
     padding: 30px;
-    padding-top: 75px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -107,7 +106,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    background-color: #ffffff;
+    
   }
 
   .text-field-icon {
@@ -116,9 +115,10 @@
     align-items: center;
     padding: 0;
   }
+  
 
   .MuiInputBase-input {
-    padding-top: 15px;
+    padding-top: 10px;
     padding-right: 10px;
   }
 
@@ -130,6 +130,7 @@
   .error-alert {
     display: flex;
     align-items: center;
+    font-size: 10.75px;
   }
 
   .error-alert .MuiAlert-icon {
